动态对象年龄判定